# TicTacToe-Players

./: README  index.html  tictactoe.js
Bash/: tictactoe.sh
C/: alphabeta.c  board.c  game.c  main.c  tictactoe.h
Haskell/: ConnectFour.hs  Game.hs  Grid.hs  Main.hs  PlayGame.hs  SearchFns.hs  Setup.hs  Test.hs  TicTacToe.hs  Tictactoe.cabal
Java/: Game.java  GameLauncher.java  TicTacToe.java  TicTacToeBoard.java  TicTacToeBoardTest.java  TicTacToeTest.java  ttt.fx
JavaScript/: board.js
Perl/: tictactoe.pl
Php/: game.php  index.php  minimax.php  tictactoe.php  ttt.php  tttCanvas.js
Scala/: build.sbt
Scala/src/main/scala/com/priddle_higson/scala/tictactoe/: AlphaBetaGame.scala  Board.scala  GameInterface.scala  Player.scala  TicTacToe.scala
Scala/src/test/scala/com/priddle_higson/scala/tictactoe/: BoardTest.scala  GameInterfaceTest.scala
Tcl/: tictactoe.tcl
